--- a/extension.html
+++ b/extension.html
@@ -23,7 +23,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/extension.html
  The 
 <code>chrome.extension</code>
  module has utilities that can be used by any extension page. It includes support for exchanging messages between an extension and its content scripts or between extensions, as described in detail in 
-<a href="messaging.html">Message Passing</a>. </p>
+<a href="tut_message_passing.html">Message Passing</a>. </p>
 
         <h2 id="apiReference">API Reference: chrome.extension</h2>
         <div class="api_reference">
