--- a/speeddial.html
+++ b/speeddial.html
@@ -41,7 +41,7 @@ copyright: opera-ccby
   </tr>
   <tr>
     <td><strong>Learn more:</strong></td>
-    <td><a href="tut_sd_extensions.html">Speed dial extensions</a></td>
+    <td><a href="tut_sd_extensions.html">Speed Dial Extensions</a></td>
   </tr>
 </table>
         <h2 id="apiReference">API Reference: opr.speeddial</h2>
