--- a/tut_publishing_guidelines.html
+++ b/tut_publishing_guidelines.html
@@ -124,6 +124,7 @@ copyright: opera-ccby
 <p>You <strong>should</strong>:</p>
 
 <ul>
+	<li><p><em>Have a screenshot size of 612x408 pixels. This is the preferable screenshot size.</em> The maximum you go can go with it is 800x600 pixels (though we would recommend you stick with 612x408 pixels if possible).</p></li>
 	<li><p>Take your screenshots with a white background.</p></li>
 	<li><p>Disable other extensions you have installed, so that yours can take center stage.</p></li>
 	<li><p>Make sure to include the relevant part of your functionality.</p></li>
