boatload of spelling, style fixes

--- a/speeddial.html
+++ b/speeddial.html
@@ -29,7 +29,7 @@ copyright: opera-ccby
   </tr>
   <tr>
     <td><strong>Description:</strong></td>
-    <td>Use the <code>opr.speeddial</code> module to access the speed dial and update its properties.</td>
+    <td>Use the <code>opr.speeddial</code> module to access a Speed Dial entry and update its properties.</td>
   </tr>
   <tr>
     <td><strong>Availability:</strong></td>
@@ -66,7 +66,7 @@ copyright: opera-ccby
                     </code>
                   </dt>
                   <dd>
-                    Title of the speed dial.
+                    Title of the Speed Dial entry.
                   </dd>
                 </div>
                 <div>
@@ -81,7 +81,7 @@ copyright: opera-ccby
                     </code>
                   </dt>
                   <dd>
-                    URL to which the speed dial points to.
+                    URL to which the Speed Dial entry points to.
                   </dd>
                 </div>
           </dl></dd>
@@ -95,7 +95,7 @@ copyright: opera-ccby
                 </code></div>
                 <div class="description">
                   <p>
-                    Retrieves details about the extensions speed dial.
+                    Retrieves details about the extension's Speed Dial entry.
                   </p>
                   <h4>Parameters</h4>
                   <dl>
@@ -139,7 +139,7 @@ copyright: opera-ccby
                 </code></div>
                 <div class="description">
                   <p>
-                    Modifies the properties of the speed dial extension, namely its URL and Title.
+                    Modifies the properties of the Speed Dial entry, namely its URL and Title.
                   </p>
                   <h4>Parameters</h4>
                   <dl>
@@ -168,7 +168,7 @@ copyright: opera-ccby
                                 </code>
                               </dt>
                               <dd>
-                                The URL the speed dial points to.
+                                The URL the Speed Dial entry points to.
                               </dd>
                             </div>
                             <div>
