--- a/tut_icons.html
+++ b/tut_icons.html
@@ -102,7 +102,7 @@ copyright: opera-ccby
 
 	<ol>
 		<li>Icons should be scaled nicely (no deformation, blurring or loss of intended details).<br><img src="static/images/do_dont_blur.png" alt="Scaling and blur" /></li>
-		<li>Icon edges should be clean (no blur on straight lines and no pixeled corners).<br><img src="static/images/do_dont_grid.png" alt="Clean edges" /></li>
+		<li>Icon edges should be clean (no blur on straight lines).<br><img src="static/images/do_dont_grid.png" alt="Clean edges" /></li>
 		<li>Icons with transparent backgrounds must be centered. The icon must not conflict with the Opera UI button.<br><img src="static/images/do_dont_center.png" alt="Centered backgrounds" /></li>
 		<li>Icons should be anti-aliased or perfectly pixelated.<br><img src="static/images/do_dont_pixel.png" alt="Anti-aliasing and pixellation" /></li>
 		<li>Icons must not be completely white, and must not lose their coherence on a white background or on the Opera toolbar chrome.<br><img src="static/images/do_dont_white.png" alt="Not completely white background" /></li>
@@ -130,13 +130,13 @@ copyright: opera-ccby
 	<p><img src="static/images/02_texttool.png" alt="The text tool button" /></p>
 	<p class="comment">Figure 7: Find the "Text Tool".</p>
 
-	<p>Make sure you have the "icons" layer group selected and click anywhere to start writing. the easiest way to get the icon you want is to copy and paste the letter from the character palette (Figure 6) and paste it into the text box. Depending on the graphics package used, you might have to apply the webdings font to the text again. Figure 8 shows the font applied.</p>
+	<p>Make sure you have the "icons" layer group selected and click anywhere to start writing. the easiest way to get the icon you want is to copy and paste the letter from the character palette (Figure 6) and paste it into the text box. Depending on the graphics package used, you might have to apply the Webdings font to the text again. Figure 8 shows the font applied.</p>
 
 
 	<p><img src="static/images/03_webdings.png" alt="Click on the image for the full resolution" /></p>
 	<p>Figure 8: Use a font for quickly applying an icon shape to your icon.</p>
 
-	<p>An elegant and proven way of making your icon look professional is to make the shape white on a subtle gradient colored background. Since this template is all about simplicity and premade backgrounds, I strongly suggest you stick with this too, for now.</p>
+	<p>An elegant and proven way of making your icon look professional is to make the shape white on a subtle gradient colored background. Since this template is all about simplicity and pre-made backgrounds, I strongly suggest you stick with this too, for now.</p>
 
 	<p>In order to tweak your icon shape, you'll need to make it a vector shape layer. From the "Layer" dropdown menu, select "Type" and "Convert to Shape" (the same can be achieved by right/Ctrl + clicking the type layer). This will make the letter, or in this case icon, into an editable vector shape with Bézier curve points for you to play with. Figures 9-11 show this process.</p>
 
@@ -144,7 +144,7 @@ copyright: opera-ccby
 	<p class="comment">Figure 9: Converting the text to a vector shape will provide you with a fine grained control of it.</p>
 
 	<p><img src="static/images/06_shapezoomed.png" alt="The resulting shape with vector outlines" /></p>
-	<p class="comment">Figure 10: An enlarged view of your webding turned vector shape.</p>
+	<p class="comment">Figure 10: An enlarged view of your Webding turned vector shape.</p>
 	
 	<p><img src="static/images/06_shapelayer.png" alt="The resulting shape layer" /></p>
 	<p class="comment">Figure 11: Your shape layer will now look like this. You can no longer edit the content with the text tool, but you can alter the shape of it.</p>
@@ -159,7 +159,7 @@ copyright: opera-ccby
 	
 	<p>First, you want to change the point from which the orientation of the icon shape is made. In the little 3x3 grid with a black box in the center, hit the top left corner box. This will make Photoshop orient your shape from the top left corner and is a bit easier to work with than the alternatives. Your icon is probably not placed on a whole pixel value on the x- or y-axis — Change this now by rounding the "X:" and "Y:" values up or down.</p>
 	
-	<p>In the next fields, "W:" (width) and "H:" (height), you should also input whole pixel values. By default these fields are set to percentages, so you have to right click both of them in turn and selext "pixels" from the dropdown. If you want to, you can click the little chain icon between the fields to maintain the aspect ratio of your icon, but in this example the values need to be set individually. Round your values up to a whole, preferrably even number, such as 108 px (roughly 85% of 128). As a rule of thumb, I first scale the widest aspect to the desired size with aspect ratio locked, then release it and tweak the narrow aspect if needed. Usually pointy or curved sides can do without a perfect fit, while straight edges look better when exactly matching the pixel grid.</p>
+	<p>In the next fields, "W:" (width) and "H:" (height), you should also input whole pixel values. By default these fields are set to percentages, so you have to right click both of them in turn and select "pixels" from the dropdown. If you want to, you can click the little chain icon between the fields to maintain the aspect ratio of your icon, but in this example the values need to be set individually. Round your values up to a whole, preferably even number, such as 108 px (roughly 85% of 128). As a rule of thumb, I first scale the widest aspect to the desired size with aspect ratio locked, then release it and tweak the narrow aspect if needed. Usually pointy or curved sides can do without a perfect fit, while straight edges look better when exactly matching the pixel grid.</p>
 	
 	<p>When you're happy with the size (Figure 13 shows a good set of values), go back and center your icon shape on the background using the input fields.</p>
 	
@@ -196,7 +196,7 @@ copyright: opera-ccby
 	
 	<p>With the "Direct Selection Tool" selected (the white arrow), select the corner points and move them to pixel corners. You can fix most things using this technique, although I'd suggest leaving the oval dot to be treated with the free transform technique as this easily distorts.</p>
 		
-	<p>I mentioned earlier the benefit of knowing your icon shape inside out, and this is evident in the dot in this case. If it's scaled to be perfectly round and as wide as the stem, it vanishes in a blur. By being true to the original design and benefitting from its qualities, the dot is better left half a pixel wider on each side. While not knife sharp, this is as good a result as you can hope for at this resolution.</p>
+	<p>I mentioned earlier the benefit of knowing your icon shape inside out, and this is evident in the dot in this case. If it's scaled to be perfectly round and as wide as the stem, it vanishes in a blur. By being true to the original design and benefiting from its qualities, the dot is better left half a pixel wider on each side. While not knife sharp, this is as good a result as you can hope for at this resolution.</p>
 	
 	<p><img src="static/images/20_final.png" alt="Final small icon" /></p>
 	<p class="comment">Figure 18: Final small icon. <em>The image shows 18 px icon from old tutorial.</em></p>
@@ -206,7 +206,7 @@ copyright: opera-ccby
 	
 	<h3 id="palette">The palette</h3>
 	
-	<p>To make your icon interesting, it should have a nice colour, with a subtle gradient. A colour palette is provided in the template — click on the gradient you wish to try, and notice that the layer this gradient sits on has been selected in the layers panel. Right/Ctrl + click the blue area of that layer and select "Copy Layer Style". Paste this gradient by selecting the background shape layers you wish to apply it to, Right/Ctrl + clicking the blue area of those layers and selecting "Paste Layer Style". You can select multiple layers and have all of them affected at once if you wish.</p>
+	<p>To make your icon interesting, it should have a nice color, with a subtle gradient. A color palette is provided in the template — click on the gradient you wish to try, and notice that the layer this gradient sits on has been selected in the layers panel. Right/Ctrl + click the blue area of that layer and select "Copy Layer Style". Paste this gradient by selecting the background shape layers you wish to apply it to, Right/Ctrl + clicking the blue area of those layers and selecting "Paste Layer Style". You can select multiple layers and have all of them affected at once if you wish.</p>
 	
 	<p><img src="static/images/21_palettelayer.png" alt="Select layer style from palette" /><img src="static/images/22_copyeffect.png" alt="Copy layer style" /></p>
 	<p class="comment">Figure 20: Copying the layer style of a palette gradient color.</p>
