--- a/manifest.html
+++ b/manifest.html
@@ -80,7 +80,7 @@ are <b>name</b> and <b>version</b>.
   "<a href="manifest.html#key">key</a>": "<em>publicKey</em>",
   "<a href="manifest.html#minimum_opera_version">minimum_opera_version</a>": "<em>versionString</em>",
   "<a href="manifest.html#offline_enabled">offline_enabled</a>": true,
-  "<a href="options.html">options_page</a>": "<em>aFile</em>.html",
+  "<a href="tut_architecture_overview.html#the_options_page">options_page</a>": "<em>aFile</em>.html",
   "<a href="declare_permissions.html">permissions</a>": [...],
   "<a href="autoupdate.html">update_url</a>": "http://<em>path/to/updateInfo</em>.xml",
   "<a href="manifest.html#web_accessible_resources">web_accessible_resources</a>": [...],
